Migrate bad ibank functions from includes to the classes directory
Create "Bad" xenobe class
Migrate xenobe functions from includes to the classes directory
Create "Bad" planet class
Migrate planet_ functions from includes to the classes directory
Create "Bad" traderoute class
Migrate traderoute functions from includes to the classes directory
Update copyright notices

TheKabal (27 April 2014)
--------------------------------------
Goodbye adodb's xml schema, hello SQL schema, add support for persistent tables

TheMightyDude (02 April 2014)
--------------------------------------
Fixed bug in port.php when paying bounty back from your IGB Bank which resulted in no url link back to port.php.

TheKabal (23 February 2014)
--------------------------------------
Remove Symfony/Doctrine DBAL, add support for PDO, including converting footer, common, and the first step in create universe
Add note about old versions of PHP, and the security risk they bring

TheMightyDude (31 January 2014)
--------------------------------------
Added IGB Terminal access via Command Menu. (requested feature)

TheKabal (26 January 2014)
--------------------------------------
Update composer, htmlpurifier, and switch to PSR-4 autoloading
Add minimal connection support for DBAL to begin developing in that direction

TheKabal (2 December 2013)
--------------------------------------
Security fix for ship_id not being filtered before presenting to DB layer

TheKabal (23 November 2013)
--------------------------------------
Improve SSL support by moving resources to use http/https independent resource references.

TheKabal (23 November 2013)
--------------------------------------
configset_classic.ini.php is now classic_set_config.ini.php

TheKabal (23 November 2013)
--------------------------------------
Fixes stemming from global variables

TheKabal (16 November 2013)
--------------------------------------
Remove the global variables hacks for good.

TheKabal (16 November 2013)