@@ -118,9 +118,8 @@ if ($flag == 0)
         $mturns = $bntreg->max_turns;
     }
 
-    // Hash the password.  $hashedPassword will be a 60-character string.
-    $hasher = new PasswordHash (10, false); // The first number is the hash strength, or number of iterations of bcrypt to run.
-    $hashed_pass = $hasher->HashPassword ($password);
+    // Hash the password.  $hashed_pass will be a 60-character string.
+    $hashed_pass = password_hash ($password, PASSWORD_DEFAULT); // PASSWORD_DEFAULT is the strongest algorithm available to PHP at the current time - today, it is BCRYPT.
 
     $result2 = $db->Execute ("INSERT INTO {$db->prefix}ships (ship_name, ship_destroyed, character_name, password, email, armor_pts, credits, ship_energy, ship_fighters, turns, on_planet, dev_warpedit, dev_genesis, dev_beacon, dev_emerwarp, dev_escapepod, dev_fuelscoop, dev_minedeflector, last_login, ip_address, trade_colonists, trade_fighters, trade_torps, trade_energy, cleared_defences, lang, dev_lssd)
                              VALUES (?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?,?);", array ($shipname, 'N', $character, $hashed_pass, $username, $bntreg->start_armor, $bntreg->start_credits, $bntreg->start_energy, $bntreg->start_fighters, $mturns, 'N', $bntreg->start_editors, $bntreg->start_genesis, $bntreg->start_beacon, $bntreg->start_emerwarp, $bntreg->start_escape_pod, $bntreg->start_scoop, $bntreg->start_minedeflectors, $stamp, $_SERVER['REMOTE_ADDR'], 'Y', 'N', 'N', 'Y', NULL, $lang, $bntreg->start_lssd));
@@ -165,7 +164,7 @@ if ($flag == 0)
         echo $langvars['l_new_welcome_sent'] . '<br><br>';
 
         // They have logged in successfully, so update their session ID as well
-        adodb_session_regenerate_id();
+        session_regenerate_id();
 
         $_SESSION['logged_in'] = true;
         $_SESSION['password'] = $password;
