@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInit4c1606bf8d1841dc664e2afe71507df0
+class ComposerAutoloaderInitdf9ed3b5a61ce1bd73f71050bbefe808
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInit4c1606bf8d1841dc664e2afe71507df0
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInit4c1606bf8d1841dc664e2afe71507df0', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInitdf9ed3b5a61ce1bd73f71050bbefe808', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInit4c1606bf8d1841dc664e2afe71507df0', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInitdf9ed3b5a61ce1bd73f71050bbefe808', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
@@ -45,14 +45,14 @@ class ComposerAutoloaderInit4c1606bf8d1841dc664e2afe71507df0
 
         $includeFiles = require __DIR__ . '/autoload_files.php';
         foreach ($includeFiles as $file) {
-            composerRequire4c1606bf8d1841dc664e2afe71507df0($file);
+            composerRequiredf9ed3b5a61ce1bd73f71050bbefe808($file);
         }
 
         return $loader;
     }
 }
 
-function composerRequire4c1606bf8d1841dc664e2afe71507df0($file)
+function composerRequiredf9ed3b5a61ce1bd73f71050bbefe808($file)
 {
     require $file;
 }
